feat: 知识库文档解析优化 — 导入流程、上下文提示词、Chroma 向量存储等多项改进
- 文档导入两阶段流程重构（上传→预览→确认），支持 docx/pdf 解析 + Markdown 预览
- 图片提取与权限管控 — docx/pdf 图片保留为本地文件，回答中正确引用
- LLM 回答中图片保留约束 — role.md 强化措辞 + 工具结果内嵌提醒
- 知识库图片接口 — 三重权限校验 + 路径遍历防护
- 启动时从 Chroma 重建关键词索引，解决重启后 BM25 失效
- Chroma API v2 适配 — listCollections 响应解析 + where 字段空判断
- ChromaClient.deleteByMetadata 解析 collection name→UUID
- 图片 URL 添加 server.servlet.context-path 前缀
- markdown 消息图片 max-width:100% 防撑开聊天区域
- deleteDoc 清理 dataDir 下源文件和 md 文件
- ImportDocDialog 关闭时弹确认框清理 pending 记录
- TextSplitter 无参构造适配 v2 签名
- docx 标题检测三层兜底 — outlineLvl + 样式名 + 文档样式表
- 工具描述提示词移至 prompts/tools/ 目录
- 文档状态管理 — pending/processing/ready/error 状态流转 + 重新解析

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>